--- a/aws/apigw.yaml
+++ b/aws/apigw.yaml
@@ -5,6 +5,8 @@ Parameters:
     Type: String
   Version:
     Type: String
+  AutomaStackName:
+    Type: String
 Conditions:
   IsProduction: !Equals [ !Ref Environment, 'prod' ]
 Resources:
@@ -41,8 +43,11 @@ Resources:
                   - dynamodb:Query
                   - dynamodb:UpdateItem
                 Resource:
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}'
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}/index/*'
+                  - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                  - Fn::Join:
+                      - ''
+                      - - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                        - '/index/*'
         - PolicyName: SendMessage
           PolicyDocument:
             Version: '2012-10-17'
@@ -51,7 +56,7 @@ Resources:
                 Action:
                   - sqs:SendMessage
                 Resource:
-                  - !GetAtt AutomaSqsQueue.Arn
+                  - Fn::ImportValue: !Sub '${AutomaStackName}-AutomaSqsQueueArn'
         - PolicyName: ExecuteApi
           PolicyDocument:
             Version: '2012-10-17'
