--- a/aws/automa.yaml
+++ b/aws/automa.yaml
@@ -5,6 +5,8 @@ Parameters:
     Type: String
   Version:
     Type: String
+  DbStackName:
+    Type: String
 Conditions:
   IsProduction: !Equals [ !Ref Environment, 'prod' ]
 Resources:
@@ -50,8 +52,11 @@ Resources:
                   - dynamodb:Query
                   - dynamodb:UpdateItem
                 Resource:
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}'
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}/index/*'
+                  - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                  - Fn::Join:
+                    - ''
+                    - - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                      - '/index/*'
         - PolicyName: SendMessage
           PolicyDocument:
             Version: '2012-10-17'
@@ -92,6 +97,9 @@ Resources:
   AutomaSqsFunctionTrigger:
     Type: AWS::Lambda::EventSourceMapping
     Condition: IsProduction # Local dev server does SQS handling instead of Lambda
+    DependsOn:
+      - AutomaSqsQueue
+      - AutomaSqsFunction
     Properties:
       BatchSize: 10
       EventSourceArn: !GetAtt AutomaSqsQueue.Arn
@@ -99,3 +107,13 @@ Resources:
       FunctionResponseTypes:
         - ReportBatchItemFailures
       MaximumBatchingWindowInSeconds: 0
+
+Outputs:
+  AutomaSqsQueueArn:
+    Value: !GetAtt AutomaSqsQueue.Arn
+    Export:
+      Name: !Sub '${AWS::StackName}-AutomaSqsQueueArn'
+  AutomaSqsQueueUrl:
+    Value: !Ref AutomaSqsQueue
+    Export:
+      Name: !Sub '${AWS::StackName}-AutomaSqsQueueUrl'
