--- a/aws/ws.yaml
+++ b/aws/ws.yaml
@@ -5,6 +5,8 @@ Parameters:
     Type: String
   Version:
     Type: String
+  DbStackName:
+    Type: String
 Conditions:
   IsProduction: !Equals [ !Ref Environment, 'prod' ]
 Resources:
@@ -40,8 +42,11 @@ Resources:
                   - dynamodb:Query
                   - dynamodb:UpdateItem
                 Resource:
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}'
-                  - !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/boardgamefiesta-${Environment}/index/*'
+                  - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                  - Fn::Join:
+                      - ''
+                      - - Fn::ImportValue: !Sub '${DbStackName}-TableArn'
+                        - '/index/*'
 
   WsConnectFunction:
     Type: AWS::Lambda::Function
@@ -217,3 +222,13 @@ Resources:
       Action: lambda:InvokeFunction
       FunctionName: !Ref WsDefaultFunction
       Principal: apigateway.amazonaws.com
+
+Outputs:
+  WsApiId:
+    Value: !Ref WsApi
+    Export:
+      Name: !Sub '${AWS::StackName}-WsApiId'
+  WsApiEndpoint:
+    Value: !GetAtt WsApi.ApiEndpoint
+    Export:
+      Name: !Sub '${AWS::StackName}-WsApiEndpoint'
