--- a/game/pom.xml
+++ b/game/pom.xml
@@ -44,6 +44,10 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.microprofile.config</groupId>
+            <artifactId>microprofile-config-api</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.quarkus</groupId>
